--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,7 @@ itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.2
 numpy
-pandas==1.5.3
+pandas
 python-dateutil==2.8.2
 pytz==2022.7.1
 requests==2.28.2
